# okena

./: CLAUDE.md  Cargo.toml
.github/workflows/: build.yml
crates/okena-core/: Cargo.toml
crates/okena-core/src/: http.rs  lib.rs  profiles.rs  send_payload.rs
crates/okena-core/src/client/: connection.rs  types.rs
crates/okena-core/src/process/: bus.rs  mod.rs
crates/okena-ext-claude/: Cargo.toml
crates/okena-ext-claude/src/: status.rs  usage.rs
crates/okena-ext-codex/: Cargo.toml
crates/okena-ext-codex/src/: status.rs  usage.rs
crates/okena-ext-github/: Cargo.toml
crates/okena-ext-github/src/: lib.rs  status.rs  ui_helpers.rs
crates/okena-ext-updater/: Cargo.toml
crates/okena-ext-updater/src/: checker.rs  downloader.rs  lib.rs  orchestrator.rs  process.rs  status.rs
crates/okena-files/: Cargo.toml
crates/okena-files/src/: content_search.rs
crates/okena-files/src/file_viewer/: loading.rs  mod.rs  render.rs
crates/okena-git/src/: commit_graph.rs  lib.rs  repository.rs
crates/okena-git/src/repository/: branch.rs  status.rs
crates/okena-hooks/src/: hooks.rs
crates/okena-layout/: Cargo.toml
crates/okena-remote-client/src/: manager.rs
crates/okena-services/src/: docker_compose.rs
crates/okena-services/src/manager/: docker.rs  port_detection.rs
crates/okena-state/: Cargo.toml
crates/okena-state/src/: window_state.rs  windows.rs  workspace_data.rs
crates/okena-terminal/src/: pty_manager.rs  session_backend.rs  shell_config.rs
crates/okena-terminal/src/terminal/: child_processes.rs  io.rs  meta.rs  mod.rs
crates/okena-theme/src/: custom.rs
crates/okena-views-git/: Cargo.toml
crates/okena-views-git/src/: close_worktree_dialog.rs  git_header.rs  project_header.rs  watcher.rs  worktree_dialog.rs
crates/okena-views-git/src/close_worktree_dialog/: execute.rs
crates/okena-views-git/src/diff_viewer/: data.rs  provider.rs
crates/okena-views-git/src/git_header/: branch_picker.rs  commit_log.rs
crates/okena-views-git/src/project_header/: commit_log.rs  graph.rs  lane_layout.rs
crates/okena-views-remote/src/: remote_connect_dialog.rs
crates/okena-views-services/src/: service_panel.rs
crates/okena-views-sidebar/src/: color_picker.rs  context_menu.rs  folder_list.rs  project_list.rs  service_list.rs  worktree_list.rs
crates/okena-views-sidebar/src/sidebar/: cursor.rs  from_project_test.rs  mod.rs  renames.rs  render.rs  worktree.rs
crates/okena-views-terminal/src/: lib.rs
crates/okena-views-terminal/src/elements/: terminal_element.rs
crates/okena-views-terminal/src/layout/: layout_container.rs  navigation.rs  split_pane.rs
crates/okena-views-terminal/src/layout/tabs/: mod.rs
crates/okena-views-terminal/src/layout/terminal_pane/: content.rs  mod.rs  navigation.rs  render.rs  search_bar.rs  zoom.rs
crates/okena-views-terminal/src/overlays/: terminal_overlay_utils.rs
crates/okena-workspace/: CLAUDE.md
crates/okena-workspace/src/: focus.rs  persistence.rs  remote_sync.rs  request_broker.rs  requests.rs  sessions.rs  settings.rs  state.rs
crates/okena-workspace/src/actions/: focus.rs  folder.rs  mod.rs  project.rs  worktree.rs
crates/okena-workspace/src/actions/layout/: close.rs  move_ops.rs  split.rs  tabs.rs  tests_gpui.rs
docs/backlog/: README.md
mobile/native/src/client/: manager.rs
plans/issues/multi-window/: 05-spawn-extra-window.md  06-new-project-visibility-rule.md  07-extras-persistence-and-close.md  08-sidebar-context-menu-relabel.md
src/: CLAUDE.md  action_dispatch.rs  logging.rs  main.rs  settings.rs
src/app/: CLAUDE.md  extras.rs  headless.rs  mod.rs  notifications.rs  remote_commands.rs
src/cli/: mod.rs
src/keybindings/: config.rs  descriptions.rs  mod.rs
src/views/: mod.rs  overlay_manager.rs
src/views/overlays/: add_project_dialog.rs  command_palette.rs  log_console.rs  mod.rs  project_switcher.rs
src/views/overlays/profile_manager/: actions.rs  mod.rs  render.rs
src/views/overlays/settings_panel/: render_general.rs
src/views/panels/: hook_panel.rs  project_column.rs  status_bar.rs
src/views/root/: handlers.rs  render.rs
src/views/window/: handlers.rs  mod.rs  pane_switcher.rs  render.rs  sidebar.rs  terminal_actions.rs
src/workspace/actions/: execute.rs
