[package]
name = "okena-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = []
client = ["dep:tokio", "dep:reqwest", "dep:tokio-tungstenite", "dep:async-channel", "dep:futures"]
blocking-http = ["dep:reqwest", "reqwest/blocking"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alacritty_terminal = "0.25"
log = "0.4"
dirs = "5.0"
anyhow = "1.0"
libc = "0.2"

# Client feature deps (async networking)
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"], optional = true }
async-channel = { version = "2.3", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"
