[package]
name = "okena-views-git"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
okena-core = { path = "../okena-core", features = ["blocking-http"] }
okena-extensions = { path = "../okena-extensions" }
okena-git = { path = "../okena-git" }
okena-files = { path = "../okena-files" }
okena-ui = { path = "../okena-ui" }
okena-workspace = { path = "../okena-workspace" }

gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component" }
lyon = "1.0"

syntect = { version = "5", features = ["default-fancy"] }
smol = "2.0"
futures = "0.3"
tokio = { version = "1", features = ["sync"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
